# src/swagger.yaml
@@ -7,6 +7,144 @@ servers:
   - url: https://dn-live-test.onrender.com/
     variables: {}
 paths:
+  /api/v1/groups:
+    get:
+      tags:
+        - Groups
+      summary: Get All Groups
+      description: Endpoint for viewing all the groups that the current user belongs to.
+      operationId: GetAllGroups
+      parameters:
+        - name: memberType
+          in: query
+          required: false
+          description: Filter events by membership type (owner for owned groups, member for non-owned groups, absent for all groups)
+          schema:
+            type: string
+            enum:
+              - owner
+              - member
+      responses:
+        "200":
+          description: ""
+          headers: {}
+      deprecated: false
+    post:
+      tags:
+        - Groups
+      summary: Create Group
+      description: Endpoint for creating a group
+      operationId: CreateGroup
+      parameters: []
+      requestBody:
+        description: ""
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/CreateGroupRequest"
+                - example:
+                    groupName: "The Fellowship of the Ring"
+                    description: "One does not simply walk into Mordor"
+                    memberEmails:
+                      [
+                        "frodo@theshire.com",
+                        "samwise@theshire.com",
+                        "merry@theshire.com",
+                        "foolofatook@theshire.com",
+                        "legolas@mirkwood.com",
+                        "gimli@sonofgloin.com",
+                        "boromir@gondor.com",
+                        "aragorn@dunedin.com",
+                      ]
+            example:
+              groupName: "Stark Family"
+              description: "Winter is coming"
+              memberEmails:
+                [
+                  "catelyn@winterfell.com",
+                  "robb@winterfell.com",
+                  "sansa@winterfell.com",
+                  "arya@winterfell.com",
+                  "bran@winterfell.com",
+                  "rickon@winterfell.com",
+                ]
+        required: true
+      responses:
+        "201":
+          description: ""
+          headers: {}
+      deprecated: false
+  /api/v1/groups/{groupID}:
+    parameters:
+      - in: path
+        name: groupID
+        schema:
+          type: string
+        required: true
+        description: The group resource id
+    get:
+      tags:
+        - Groups
+      summary: Get Group
+      description: Endpoint for viewing a single group.
+      operationId: GetGroup
+      parameters: []
+      responses:
+        "200":
+          description: ""
+          headers: {}
+      deprecated: false
+    patch:
+      tags:
+        - Groups
+      summary: Update Group
+      description: Endpoint for updating a group. Group ID must be provided as a URL param!
+      operationId: UpdateGroup
+      parameters: []
+      requestBody:
+        description: ""
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/UpdateGroupRequest"
+                - example:
+                    groupName: "Living Starks"
+                    description: "Spoiler Alert"
+                    memberEmails:
+                      [
+                        "sansa@winterfell.com",
+                        "KING.BRAN@kingslanding.com",
+                        "arya@westofwesteros.com",
+                      ]
+            example:
+              groupName: "Living Starks"
+              description: "Spoiler Alert"
+              memberEmails:
+                [
+                  "sansa@winterfell.com",
+                  "KING.BRAN@kingslanding.com",
+                  "arya@westofwesteros.com",
+                ]
+        required: true
+      responses:
+        "200":
+          description: ""
+          headers: {}
+      deprecated: false
+    delete:
+      tags:
+        - Groups
+      summary: Delete Group
+      description: Endpoint for deleting a group.
+      operationId: DeleteGroup
+      parameters: []
+      responses:
+        "200":
+          description: ""
+          headers: {}
+      deprecated: false
   /api/v1/users:
     get:
       tags:
@@ -134,15 +272,9 @@ paths:
       tags:
         - Activities
       summary: Get All Activities
-      description: Endpoint for viewing all the activities
+      description: Endpoint for viewing all the activities. This endpoint returns a combination of activities, a total of 6 randomzied activity documents (3 from bored API and 3 from hard coded activities) will be returned.
       operationId: GetAllActivities
-      parameters:
-        - name: suggestions
-          in: query
-          required: false
-          description: With this query set to true, a maximum of 5 randomized ativities are fetched and returend from BoredAPI. But if set to false or absent all the pre-set activities will be returned.
-          schema:
-            type: boolean
+      parameters: []
       responses:
         "200":
           description: ""
@@ -347,6 +479,67 @@ paths:
       deprecated: false
 components:
   schemas:
+    CreateGroupRequest:
+      title: CreateGroupRequest
+      required:
+        - groupName
+        - description
+        - memberEmails
+      type: object
+      properties:
+        groupName:
+          type: string
+          description: The name of the group.
+        description:
+          type: string
+          description: A brief description of the group.
+        memberEmails:
+          type: array
+          description: A list of email addresses for the group members.
+          items:
+            type: string
+            format: email
+      example:
+        groupName: "Stark Family"
+        description: "Winter is coming"
+        memberEmails:
+          [
+            "catelyn@winterfell.com",
+            "robb@winterfell.com",
+            "sansa@winterfell.com",
+            "arya@winterfell.com",
+            "bran@winterfell.com",
+            "rickon@winterfell.com",
+          ]
+    UpdateGroupRequest:
+      title: UpdateGroupRequest
+      required:
+        - groupName
+        - description
+        - memberEmails
+      type: object
+      properties:
+        groupName:
+          type: string
+          description: The name of the group.
+        description:
+          type: string
+          description: A brief description of the group.
+        memberEmails:
+          type: array
+          description: A list of email addresses for the group members.
+          items:
+            type: string
+            format: email
+      example:
+        groupName: "Living Starks"
+        description: "Spoiler Alert"
+        memberEmails:
+          [
+            "sansa@winterfell.com",
+            "KING.BRAN@kingslanding.com",
+            "arya@westofwesteros.com",
+          ]
     CreateEventRequest:
       title: CreateEventRequest
       required:
@@ -402,17 +595,17 @@ components:
     UpdateActivityRequest:
       title: UpdateActivityRequest
       required:
-        - name
-        - category
+        - activity
+        - type
       type: object
       properties:
-        name:
+        activity:
           type: string
-        category:
+        type:
           type: string
       example:
-        name: Hiking
-        category: relaxing
+        activity: Hiking
+        type: relaxing
     SignupUserRequest:
       title: SignupUserRequest
       required:
@@ -446,11 +639,13 @@ components:
         email: example@email.com
         password: strongPass123
 tags:
-  - name: Users
-    description: ""
   - name: Auth
     description: ""
-  - name: Activities
+  - name: Users
+    description: ""
+  - name: Groups
     description: ""
   - name: Events
+    description: ""
+  - name: Activities
     description: ""
